--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,6 +7,8 @@
 <body>
 Hello!
 
-<a href="/goodbye">Say goodbye.</a> or <a href="/exit">Exit.</a>
+<a href="/goodbye?name=Tom">Say goodbye.</a> or <a href="/exit">Exit.</a>
+
+<p th:text="${message}"></p>
 </body>
 </html>
