--- a/src/main/webapp/WEB-INF/views/crud/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/crud/people/edit.html
@@ -114,93 +114,26 @@
         }
 
     </style>
-    <title>Form Validator</title>
+    <title>Update Person</title>
 </head>
 
 <body>
 <div class="container">
-    <form class="form"  th:method="POST" th:action="@{/people}" th:object="${person}">
+    <form class="form" th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
         <div class="form-control">
             <label for="username">Enter name: </label>
             <input autocomplete="off" type="text" th:field="*{name}" id="username" placeholder="Enter name"/>
-            <small>Error message</small>
+            <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error message</small>
         </div>
         <div class="form-control">
             <label for="email">Email</label>
-            <input autocomplete="off" type="text" id="email" placeholder="Enter email" th:field="*{email}">
-            <small>Error message</small>
+            <input autocomplete="off" type="email" id="email" placeholder="Enter email" th:field="*{email}">
+            <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error message</small>
         </div>
         <button>Submit</button>
     </form>
 </div>
 
-<script type="text/javascript">
-    const form = document.getElementsByClassName('form');
-    const username = document.getElementById('username');
-    const email = document.getElementById('email');
-
-    //Show input error message
-    function showError(input, message) {
-        const formControl = input.parentElement;
-        formControl.className = 'form-control error';
-        const small = formControl.querySelector('small');
-        small.innerText = message;
-    }
-
-    // Show success outline
-    function showSuccess(input) {
-        const formControl = input.parentElement;
-        formControl.className = 'form-control success';
-    }
-
-    // Check email is valid
-    function checkEmail(input) {
-        const re = /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-        if (re.test(input.value.trim())) {
-            showSuccess(input);
-        } else {
-            showError(input, 'Email is not valid');
-        }
-    }
-
-    //Check input length
-    function checkLength(input, min, max) {
-        if (input.value.length < min) {
-            showError(input, `${getFieldName(input)} must be at least ${min} characters`);
-        } else if (input.value.length > max) {
-            showError(input, `${getFieldName(input)} must be less then ${max} characters`);
-        } else {
-            showSuccess(input);
-        }
-    }
-
-    // Check required fields
-    function checkRequired(inputArr) {
-        inputArr.forEach((input, i) => {
-            if (input.value.trim() === '') {
-                showError(input, `${getFieldName(input)} is required`);
-            } else {
-                showSuccess(input);
-            }
-        });
-    }
-
-    // Get fieldname
-    function getFieldName(input) {
-        return input.id.charAt(0).toUpperCase() + input.id.slice(1);
-    }
-
-
-    //Event Listeners
-    form.addEventListener('submit', function (e) {
-        e.preventDefault();
-
-        checkRequired([username]);
-        checkLength(username, 3, 16);
-        // checkEmail(email);
-    });
-
-</script>
 </body>
 
 </html>
