--- a/src/main/webapp/WEB-INF/views/crud/people/show.html
+++ b/src/main/webapp/WEB-INF/views/crud/people/show.html
@@ -9,5 +9,11 @@
 <p th:text="${person.getName()}"></p>
 <p th:text="${person.getId()}"></p>
 <p th:text="${person.getEmail()}"></p>
+
+<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit!</a>
+
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+    <button type="submit">Delete!</button>
+</form>
 </body>
 </html>
