--- a/src/main/webapp/WEB-INF/views/crud/location/show.html
+++ b/src/main/webapp/WEB-INF/views/crud/location/show.html
@@ -27,6 +27,8 @@
         <p th:text="${object.getLatitude()}"></p>
         <h4>Sample Longitude</h4>
         <p th:text="${object.getLongitude()}"></p>
+        <h4>Sample Depth</h4>
+        <p th:text="${object.getDepth()}"></p>
         <h4>Sample from Field with ID</h4>
         <p th:text="${object.getField().getId()}"></p>
     </div>
